# ScratchParser

./: CMakeLists.txt  LICENSE
cmake/: JSON-C.cmake  OpenSSL.cmake  cwalk.cmake  libzip.cmake  zlib.cmake
include/FurredEngine/: project.h
include/scratch/: parse.h
include/scratch/project/: monitor.h  project.h
include/scratch/project/metadata/: metadata.h
include/scratch/project/metadata/semver/: semver.h
include/scratch/project/monitor/: monitor.h
src/: CMakeLists.txt  load.c  parse.c
tests/: CMakeLists.txt  parse.c
tests/resources/: Impulse 2D Physics Engine 1.3.0.sb3
